# constrained_learning_option_pricing

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  latexmkrc  pyproject.toml
.cursor/rules/: google-python-styleguide.mdc
archives/temporary_solver/: run_pathological_beta_case.py  run_stationary_shock_ma18_torrilhon.py  run_stationary_shock_ode.py
docker/: Dockerfile
documents/: draft.md
documents/cursor_rules_docs/: google-python-styleguide_pyguide.html
documents/methodology/: architecture.md  brainstorm.md  decisions.md  dynamic_regularization_manifold_beta_closure.md  etcnn_architecture.md  implementation_phases.md  methodology.tex  methodology_proposal.tex  numerical_solvers_architecture.md  phase1_bsm_implementation.md  project_notes.md  reproducibility.md  reproductibility.md  solvers_and_benchmarks.md
learning_moments_kinetics/: __init__.py
learning_moments_kinetics/models/: etcnn.py
learning_moments_kinetics/solvers/: __init__.py  binomial_tree.py
learning_moments_kinetics/utils/: __init__.py
learning_moments_kinetics/visualization/: option_plots.py
learning_option_pricing/: __init__.py
learning_option_pricing/models/: __init__.py  etcnn.py  resnet.py
learning_option_pricing/pricing/: __init__.py  bjerksund_stensland.py  interpolation.py  loss.py  singularity.py  terminal.py
learning_option_pricing/solvers/: __init__.py  binomial_tree.py
learning_option_pricing/utils/: run_context.py
learning_option_pricing/visualization/: __init__.py
singularity/definition_files/: control_dde-firedrakeDEBUG.def  control_dde-firedrake_nousernamespace.def
test/models/: test_etcnn.py
(+62 files in other folders)
